--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,15 @@
     ></script>
     <meta name="description" content="Friendly and fun way to plan events" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
+
+    <meta
+      property="og:description"
+      content="Friendly provides an intuitive and centralized experience for you and your friends to plan your upcoming events, from planning a Saturday brunch, a big game day, your next Europe trip and much more."
+    />
+    <meta
+      property="og:image"
+      content="https://firebasestorage.googleapis.com/v0/b/friendly-356420.appspot.com/o/cover.png?alt=media&token=66064494-16f2-489d-806c-bb34727b93f1"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
